# cmake_test_external1

./: CMakeLists.txt
src/: header1.h  src1.c
